Client/Style_sheets/dashboard.css
/* ... */
#graph{

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
    border:1px solid rgba(153, 153, 153, 0.1);
    gap: 10px;
    width: 95%;
    max-width: 100%;
    margin: 0 auto;
    background: none;
}
#graph div{

    border: 2px solid rgba(227, 237, 255, 0.822);
    max-height: max-content;
    border-radius: 10px;
    background-color: #436cadcc;
    
}
#graph canvas{
    width: 100%;
    height: 100%;
    margin: 0 auto;
    padding: 0;
    background-color: white;
    border-radius: 10px;
    font-weight: 600;
}


#charts{
    min-height: 200px;
    width: 100%;
    max-width: 850px;
    margin: 10px auto;
    background-color: #ffffff;
    border-radius: 10px;
}
#monthly_summary_graph {
    padding: 0;
    display: block;
    width: 100% !important;  
    height: 100% !important;
}
#Overdue-expense-section{

    margin-top: 2%;
    justify-content: center;
    border: none;
}
#Overdue-expense-section p{
    align-self: center;
    text-align: center;
    text-decoration: underline;
    font-family: system-ui, -apple-system, sans-serif;
    
}
#recents-trans-alternative{

    font-family: system-ui, -apple-system, sans-serif;
    text-align: center;
    
}
#income-trans-alternative{

    font-family: system-ui, -apple-system, sans-serif;
    text-align: center;
    
}
#expense-trans-alternative{
     
    font-family: system-ui, -apple-system, sans-serif;
    text-align: center;
    
}
#overdue_exp_list-alternative{

    font-family: system-ui, -apple-system, sans-serif;
    text-align: center;
    
}

.resent_trans{
    border-top: 2px solid rgb(0,0,0,0.5);
    margin: 0 auto;
    max-width: 96%;
}
.resent_trans div p{
    align-self: center;
    text-align: center;
    text-decoration: underline;
    font-size: large;

}

 /* Recents trans table */
#trans-table {
  min-width: 600px; 
  width: max-content;
  margin: 2% auto;
  border-collapse: collapse;
  font-family: Arial, sans-serif;
  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
  margin-bottom: 5%;

}


#trans-table th {
  background-color: rgba(15, 117, 201, 0.856);
  color: white;
  padding: 3%;
  text-align: left;
  max-height: 30px;
}

#trans-table td {
  border: 1px solid #796e6e;
  padding: 12px;
}

#trans-table tr:nth-child(even) {
  background-color: #f2f2f2;
}

#trans-table tr:hover {
  background-color: #ddd;
}

#trans-table {
  border-radius: 8px;
  overflow: hidden;
}
/* expense table */

#expense-table {
  overflow-x: auto;
  width: 90%;
  margin: 20px auto;
  border-collapse: collapse;
  font-family: Arial, sans-serif;
  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
}


#expense-table th {
  background-color: #ad413bbb;
  color: white;
  padding: 12px;
  text-align: left;
}

#expense-table td {
  border: 1px solid #796e6e;
  padding: 12px;
}

#expense-table tr:nth-child(even) {
  background-color: #f2f2f2;
}


#expense-table tr:hover {
  background-color: #ddd;
}

#expense-table {
  border-radius: 8px;
  overflow: hidden;
}

/* Income table  */
#income-table {
  overflow-x: auto;
  width: 90%;
  margin: 20px auto;
  border-collapse: collapse;
  font-family: Arial, sans-serif;
  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
}


#income-table th {
  background-color: rgba(56, 145, 56, 0.849);
  color: white;
  padding: 12px;
  text-align: left;
}

#income-table td {
  border: 1px solid #796e6e;
  padding: 12px;
}


#income-table tr:nth-child(even) {
  background-color: #f2f2f2;
}


#income-table tr:hover {
  background-color: #ddd;
}

#income-table {
  border-radius: 8px;
  overflow: hidden;
}


.overview{
    display: none;
}

.overview1{
    padding: 0px;
    flex: 1;
}


/* FOOTER */
    
#footer{
    width: 100%;
    margin-bottom: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(92, 88, 88);
}
#footer div{
    min-width: 250px;
}


#footer a{
    color: rgb(172, 168, 168);
}
#footer p{
    margin: 0px;
}

/* EXPENSES */

.expense{
    display: none;
}
.expense1{
    padding: 10px;
}
#add-expense{
    margin:0px auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 60px;
    border-bottom: 1.5px solid black;
    margin-top: 5px;
    padding: 5px;
    font-size: larger;
    
}
#add-expense label{
    font-size: 23;
    padding: 2%;
    font-family: 'Times New Roman', Times, serif;
    font-size: x-larger;
}




#expense-month{
    font-size: x-large;
    font-family: Arial, Helvetica, sans-serif;
}
.add-entry{
    height:90%;
    width:30px;
    font-size: x-large;
    align-content: center;
    
}
.create-expense-card1{
    display: none;
}

.create-expense-card{
    height: 20vh;
    max-height: 50px;
    display:flex;
    margin-left: 0 auto;
    flex-direction: row;
    justify-content: space-between;
    align-content: center;
    border: 2px solid rgb(255, 255, 255);
    border-radius: 5px;
    position: fixed;
    background-color: rgb(68, 139, 231);
    top: 40%;
    left:15%;
    width: 70%;
    min-width: max-content;
    max-width: 900px;
    padding: 5px;

}
.create-expense-card label{
    height: 80%;
    display: flex;
    flex-direction: column;
}
.create-expense-card button{
    background-color: rgb(178, 218, 255);
    border: none;
}


#expenses-list{
    display: flex;
    flex-direction: column;
    max-height: 400px;
    gap: 5px;              
    width: 100%;
    overflow-y: auto;
    padding-right: 5px;
}
.totals{
    margin: 20px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-content: center;
}
.totals label{
    font-weight: bold;
    width:20%;
}

#expenses-update-label{
    display: none; 
}

#expenses-update-label1{
    margin-left: 5px;
    margin-top:10px;
    display: flex;
    flex-direction: row;
    justify-content:space-between;
    align-items: center;
    height: 25px;  
}
.edit-expense{
    display:none;
}
/* ... */

